feat: add endpoint GetAll with pagination to DocumentsController. Add pagination for getting documents by user and by category
