# DocFlow.API/App/DTOs/ResponsesDTO.cs
@@ -1,11 +1,13 @@
-﻿namespace DocFlow.API.App.DTOs
+﻿using DocFlow.API.Documents;
+
+namespace DocFlow.API.App.DTOs
 {
 	public record UserDTO(
 		int Id, string Name, string Surname, string Email);
 
 	public record DocumentGeneralInfoDTO(
 		int Id, string Name, UserDTO? Author,
-		int? CategoryId, string? CategoryName, bool IsPrivate, bool CanEdit);
+		int? CategoryId, string? CategoryName, bool IsPrivate);
 	public record DocumentVersionDTO(
 		int Id, int Version, string Name, string Content);
 	public record DocumentDTO(
@@ -13,7 +15,10 @@
 		List<DocumentVersionDTO> Versions,
 		string? DraftContent,
 		string? DraftInitialContent,
-		DateTime? DraftModifiedAt);
+		DateTime? DraftModifiedAt,
+		bool canEdit);
 
 	public record CategoryDTO(int Id, string Name, int? ParentId);
+	public record DocumentsDTOWithPagination(List<DocumentGeneralInfoDTO> Items, int Page, int PageSize, int Total, bool HasMore);
+	public record DocumentsWithPagination(List<Document> Items, int Page, int PageSize, int Total, bool HasMore);
 }
